# bittensor-quick-register

./: Cargo.toml  LICENSE  README.md  get_subnet_info.py  simple_subnet_info.py
.github/workflows/: release.yml  test.yml
src/: client.rs  constants.rs  key_utils.rs  main.rs  register.rs  utils.rs
